--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 server.port=8080
 spring.web.allow-cors=true
+spring.config.import=dotenv:
 spring.data.mongodb.uri=${MONGODB_URI}
+jwt.secret=${JWT_SECRET}
 retryWrites=true&w=majority
 spring.data.mongodb.socket-timeout=30000
 spring.data.mongodb.connect-timeout=10000
-jwt.secret=${JWT_SECRET}
 jwt.expiration=3600000
 spring.security.oauth2.client.registration.google.scope=email,profile
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
@@ -16,4 +17,5 @@ spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleap
 spring.security.oauth2.client.provider.google.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
 login.level.org.springframework.security=DEBUG
+
 
